--- a/css/main.css
+++ b/css/main.css
@@ -1032,6 +1032,26 @@ address {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.page-title {
+  margin-top: 0px;
+  margin-bottom: 30px;
+  font-family: Roboto, sans-serif;
+  text-align: center;
+  color: #212121;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 33px;
+  letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  .page-title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 42px;
+  }
+}
+
 .backdrop {
   position: fixed;
   top: 0px;
