--- a/sass/components-index/_hero-section.scss
+++ b/sass/components-index/_hero-section.scss
@@ -54,14 +54,14 @@
 
   // для мобилки:
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), 
-  url('../../../images/header-mob1x480w.jpg'); 
+  url('../images/header-mob1x480w.jpg'); 
   background-size: cover;
 
   @media screen and (min-device-pixel-ratio: 2), 
   screen and (min-resolution: 192dpi), 
   screen and (min-resolution: 2dppx) {
     .hero-section {
-      background-image: url('../../../images/header-mob2x960w.jpg');
+      background-image: url('../images/header-mob2x960w.jpg');
       background-size: cover;
     }
   }
@@ -71,12 +71,12 @@
     max-width: 768px;
 
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), 
-    url('../../../images/header-tab1x768w.jpg');
+    url('../images/header-tab1x768w.jpg');
     background-size: cover;
 
     @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
       .hero-section {
-        background-image: url('../../../images/header-tab2x1536w.jpg');
+        background-image: url('../images/header-tab2x1536w.jpg');
         background-size: cover;
       }
     }
@@ -90,12 +90,12 @@
     margin-bottom: 94px;
 
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), 
-    url('../../../images/header-desk1x1600w.jpg');
+    url('../images/header-desk1x1600w.jpg');
     background-size: cover;
 
     @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
       .hero-section {
-        background-image: url('../../../images/header-desk2x3200w.jpg');
+        background-image: url('../images/header-desk2x3200w.jpg');
         background-size: cover;
       }
     }
